# subjects

subjects/: manage.py  pyproject.toml
subjects/subjects/: asgi.py  settings.py  urls.py  wsgi.py
subjects/subjects/course/: models.py  views.py
subjects/subjects/subject/: models.py  views.py
